# Translations for the basic Listaller components

add_subdirectory(ast)
add_subdirectory(ca)
add_subdirectory(cs)
add_subdirectory(da)
add_subdirectory(de)
add_subdirectory(es)
add_subdirectory(fi)
add_subdirectory(fr)
add_subdirectory(he)
add_subdirectory(id)
add_subdirectory(it)
add_subdirectory(lt)
add_subdirectory(nds)
add_subdirectory(nl)
add_subdirectory(oc)
add_subdirectory(pl)
add_subdirectory(ru)
add_subdirectory(sk)
add_subdirectory(sv)
add_subdirectory(tr)
add_subdirectory(zh_CN)
